project2/averydeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: averypage
  labels:
    app: averypage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: averypage
  template:
    metadata:
      labels:
        app: averypage
    spec:
      containers:
      - name: nginx
        image: andrewm90/avery
        ports:
        - containerPort: 80
