project2/averyingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: averypage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: averyfans.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: averypage
            port: 
              number: 80
